@@ -64,7 +64,7 @@ Vue.component('lms-toolbar', {
 <v-toolbar fixed dense app class="lms-toolbar noselect">
  <v-menu bottom class="toolbar-menu">
   <v-toolbar-title slot="activator">
-   <div class="maintoolbar-title ellipsis"><v-icon v-if="playerStatus.sleepTimer" style="padding-right: 8px">hotel</v-icon>{{player ? player.name : trans.noplayer}} <v-icon>arrow_drop_down</v-icon></div>
+   <div class="maintoolbar-title ellipsis"><v-icon v-if="playerStatus.sleepTimer" class="player-icon-pad">hotel</v-icon><v-icon v-if="playerStatus.synced" class="player-icon-pad">link</v-icon>{{player ? player.name : trans.noplayer}} <v-icon>arrow_drop_down</v-icon></div>
    <div v-if="!desktop" class="maintoolbar-subtitle subtext ellipsis">{{undefined===songInfo ? trans.nothingplaying : (!desktop && $route.path=='/nowplaying') ? playlist.count+playlist.duration : songInfo}}</div>
   </v-toolbar-title>
        
@@ -199,6 +199,9 @@ Vue.component('lms-toolbar', {
             }
             if (playerStatus.will_sleep_in!=this.playerStatus.sleepTimer) {
                 this.playerStatus.sleepTimer = playerStatus.will_sleep_in;
+            }
+            if (playerStatus.synced!=this.playerStatus.synced) {
+                this.playerStatus.synced = playerStatus.synced;
             }
 
             if (!this.desktop) {
